communityManager/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: community-manager-service
spec:
  selector:
    app: community-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
