communityManager/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: community-manager-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: community.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: community-manager-service
                port:
                  number: 80
